# contiguous_collections

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
src/: array2.rs  lib.rs  ordvec.rs
