[package]
name = "contiguous_collections"
version = "0.1.0"
edition = "2021"
description = "A library of collections backed by flat contiguous arrays"
repository = "https://github.com/timlathy/contiguous_collections"
license = "MIT"
keywords = ["2d", "array", "ordered", "vector"]
categories = ["data-structures"]

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }
